# NewsResearcher

./: .env.example  .gitignore  EXECUTION_PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
deploy/langfuse/: docker-compose.yml
newsresearch/: cli.py  config.py
newsresearch/agents/: sourcing_agent.py  subtopic_agent.py
newsresearch/clustering/: cluster.py  embeddings.py
newsresearch/data/: tranco_top100k.csv  tranco_top100k.csv.README  trusted_outlets.yaml
newsresearch/graph/: build.py  state.py
newsresearch/graph/nodes/: __init__.py  gate1.py  gate2.py
newsresearch/llm/: models.py  schemas.py
newsresearch/llm/prompts/: example.txt  subtopic_propose.txt
newsresearch/observability/: cost_callback.py  langfuse_setup.py  mlflow_setup.py
newsresearch/persistence/: db.py  schema.sql
newsresearch/reputation/: cache.py  scorer.py  signals.py
newsresearch/sourcing/: backfill_trigger.py  dedup.py  gdelt.py  google_news_backfill.py  rss.py
notebooks/: phase2-clustering-recommendation.md  phase2-reconciliation-design.md  phase2-subtopic-prompt-design.md  phase2_clustering_eval.py  phase2_reconciliation_eval.py
tests/: conftest.py  test_backfill_trigger.py  test_cli.py  test_clustering_cluster.py  test_clustering_embeddings.py  test_config.py  test_cost_callback.py  test_dedup.py  test_gate1.py  test_gate2.py  test_gdelt.py  test_google_news_backfill.py  test_graph_build.py  test_langfuse_setup.py  test_llm_models.py  test_llm_prompts_and_schemas.py  test_mlflow_setup.py  test_persistence_db.py  test_reputation_cache.py  test_reputation_scorer.py  test_reputation_signals.py  test_rss.py  test_sourcing_agent.py  test_sourcing_module_boundaries.py  test_subtopic_agent.py  test_subtopic_reconciliation.py  test_trusted_outlets.py
tests/fixtures/: clustering_synthetic_topics.json  gdelt_doc2_capped_250_climate.json  reconciliation_drop.json  reconciliation_merge.json  reconciliation_split.json
tests/live/: test_gdelt_live.py  test_langfuse_live.py  test_rss_live.py  test_sourcing_agent_live.py  test_subtopic_agent_live.py
