[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsresearch"]

[project]
name = "newsresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "langchain>=1.3.14",
    "langchain-core>=1.5.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.4.0",
    "langfuse>=4.14.1",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mlflow>=3.14.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "typer>=0.27.0",
]

[project.scripts]
newsresearch = "newsresearch.cli:app"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.22",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
markers = [
    "live: opt-in real-API smoke test; never run by default, select explicitly via `-m live`",
]
# Testing approach (EXECUTION_PLAN.md): tests/live/ is opt-in only, never
# CI-blocking -- excluded from a plain `uv run pytest` by default.
addopts = "-m 'not live'"
